# opsi_sepdutyhe_bench

./: .gitignore  README.md  opsi_sepdutyhe_bench.go
cpp/: CMakeLists.txt  Dockerfile  INSTRUCTIONS.md  eq_BGV_multi_sender_bench.cpp  eq_indicator_bench.cpp  passengers.csv
go/: INSTRUCTIONS.md  go.mod  opsi_sepdutyhe_bench.go
go/benchmarks/: runtimes__numclients_14_inputsize_14_logN_12_avg_5  runtimes__numclients_14_inputsize_14_logN_13_avg_5  runtimes__numclients_14_inputsize_2_logN_13_avg_100  runtimes__numclients_14_inputsize_2_logN_13_avg_100_interrupted  runtimes__numclients_14_inputsize_2_logN_13_avg_2  runtimes__numclients_15_inputsize_15_logN_12_avg_50  runtimes__numclients_15_inputsize_15_logN_12_avg_60  runtimes__numclients_15_inputsize_15_logN_13_avg_50  runtimes__numclients_15_inputsize_2_logN_12_avg_5  runtimes__numclients_15_inputsize_2_logN_13_avg_100  runtimes__numclients_15_inputsize_2_logN_13_avg_100_interrupted  runtimes__numclients_15_inputsize_2_logN_13_avg_5  runtimes__numclients_16_inputsize_2_logN_12_avg_5  runtimes__numclients_16_inputsize_2_logN_13_avg_100  runtimes__numclients_16_inputsize_2_logN_13_avg_5  runtimes__numclients_20_inputsize_2_logN_13_avg_100_interrupted  runtimesnumclients14_inputsize14_logN12_avg5
